Pass of project, fixing bits. Next: evaluate visualizations. Few things left over. Send Bernhard draft.

--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -173,7 +173,7 @@
 @MISC {ctkcmd},
     author       = "CTK",
     title        = "CTK Command Line Modules",
-    howpublished = "http://www.commontk.org/docs/html/CommandLineModules_Page.html",
+    howpublished = "http://www.commontk.org/docs/html/CommandLineModules\_Page.html",
     note         = "{Last Accessed: 07/06/15}"
 }
 
@@ -189,7 +189,7 @@
     title       = "What Does Fetal Movement Predict About Behavior During the First Two Years of Life?",
     institution = "Johns Hopkins University and National Institute of Child Health and Human Development",
     year        = "2001",
-    address     = "http://www.jhsph.edu/research/centers-and-institutes/johns-hopkins-fetal-development-project/_materials/_publications/movement.pdf"
+    address     = "http://www.jhsph.edu/research/centers-and-institutes/johns-hopkins-fetal-development-project/\_materials/\_publications/movement.pdf"
 }
 
 @MISC {mrilab},
