--- a/Final-Report/body.tex
+++ b/Final-Report/body.tex
@@ -1,21 +1,22 @@
 \chapter{Implementation - Tool}
-This project has been implemented as an MITK plugin. MITK, the Medical Imaging Interaction Toolkit, is a free open-source software system for the development of interactive medical image processing software. It combines ITK (for image processing) and VTK (for visualization) together and provides a basic application, the MITK Workbench, that can be extended with plugins.
+This project has been implemented as an MITK plugin. MITK, the Medical Imaging Interaction Toolkit, is a free open-source software system for the development of interactive medical image processing software. It combines ITK (for image processing) and VTK (for visualization) together with a basic application, the MITK Workbench, that can be extended with plugins.
 
 \begin{figure}[H]
   \includegraphics[width=\textwidth]{images/tool/mitk.png}
   \caption{MITK Workbench + Plugin}\label{fig:scansettings}
 \end{figure}
 
-The plugin that has been developed is a research prototype designed primarily to visualize the uncertainty in MRI reconstructions. However, it also begins to integrate all parts of the reconstruction pipeline together into one application. Broadly speaking the pipeline can be split into three steps: scan -> reconstruct -> visualize. The plugin developed incorporates components from each stage.
+The plugin developed in this project is a research prototype designed primarily to visualize the uncertainty in MRI reconstructions. However, it also begins to integrate all parts of the reconstruction pipeline together into one application. Broadly speaking the pipeline can be split into three steps: scan -> reconstruct -> visualize. Components from each stage have been incorporated into the plugin.
 
-\subsection*{Scan Simulation}
+\subsection*{Scan (Simulate)}
 Given a previous reconstruction, that is assumed to be a perfect, ground truth, representation, we can simulate a scan by re-sampling it.
 
 \subsection*{Reconstruct}
 Using slice stacks (simulated or otherwise) we can reconstruct a super-resolution image. Optionally landmarks can be provided to guide the registration process.
 
 \subsection*{Visualize}
-When the reconstruction has finished we can visualize how well it went.
+When the reconstruction has finished we can visualize how well it went with a number of different techniques:
+
 \begin{itemize}
   \item Thresholding
   \item Uncertainty Sphere
@@ -50,7 +51,7 @@ The direction to scan in. You may expect this to be just one vector (the z-direc
 \subsection*{Motion Corruption}
 Some simple motion corruption can be enabled. Currently the implementation is quite simple; the motion only happens in between slices being scanned. Before each slice gets scanned a random rotation (up to a maximum specified) is applied about a random axis to the original image.
 
-Figure \ref{fig:scansimulationexample} shows an example of an axial scan (y-axis) where the preview is overlayed on a volume rendering of the ground truth volume. The preview box shows the boundary of the scan, which is updated to show any changes to the configuration. The effects of the motion corruption are apparent when viewed from the side; successive stacks don't line up.
+Figure \ref{fig:scansimulationexample} shows an example of an axial scan (y-axis) where the preview is overlayed on a volume rendering of the ground truth volume. The preview box shows the boundary of the scan, which is updated to show any changes to the configuration. The effects of the motion corruption are apparent when viewed from the side: successive stacks don't line up.
 
 \begin{figure}[H]
   \centering
@@ -67,9 +68,11 @@ Figure \ref{fig:scansimulationexample} shows an example of an axial scan (y-axis
   \caption{Example Scan Simulation.}\label{fig:scansimulationexample}
 \end{figure}
 
+The implementation of this feature is relatively simple; the 'perfect scan' is simply resampled using the parameters given and each point is linearly interpolated. The motion corruption is a case of applying a transformation matrix before sampling to move elsewhere in the volume.
+
 \newpage
 \section{Reconstruction}\label{section:reconstruction}
-This part of the tool uses the fast GPU reconstruction code developed in \cite{uncertaintysvd}. The Common Toolkit (CTK) includes functionality that allows you to run external binaries from within MITK\cite{ctkcmd}. A wrapper executable has been written, which conforms to the Command Line Module XML Schema, which essentially allows the MITK plugin to make calls to the GPU reconstruction code and automatically import the result.
+This part of the tool uses the fast GPU reconstruction code developed in \cite{uncertaintysvd}. The Common Toolkit (CTK) includes functionality that allows you to run external binaries from within MITK\cite{ctkcmd}. A wrapper executable has been written, which conforms to the Command Line Module XML Schema, and essentially allows the MITK plugin to make calls to the GPU reconstruction code and automatically import the result.
 
 One of the ways that the quality of the reconstruction can be improved is by manually labelling landmarks in the scans, such as the eyes and extreme points of the skull. This helps the registration step of the reconstruction align each of the initial scans. A prototype to allow each stack to be marked up in this way has been developed with the view of getting the opinion of researchers on whether this is a process they are willing to do, or even if they have the time to do it.
 
@@ -187,9 +190,9 @@ Figure \ref{fig:erosionoverview} shows how the soft fade out of uncertainty due 
 \newpage
 \section{Test Uncertainties}\label{section:testuncertainties}
 
-To test the different visualizations during development a number of artificial uncertainty volumes were used, as well as uncertainty from a fetal brain reconstruction.
+To test and debug the visualizations during development a number of artificial uncertainty volumes were used, as well as uncertainty from a genuine fetal brain reconstruction.
 
-For each visualization that has been developed the results with these test uncertainties will be examined and compared.
+Results of each visualization with these test uncertainties are shown in the relevant sections.
 
 \subsection*{Sphere of Uncertainty}
 An uncertainty volume where the uncertainty is proportional to the distance from the center. The uncertainty at the center is 0 (very uncertain) which then goes to 1 (very certain) at the edges.
@@ -211,37 +214,37 @@ Uncertainty generated from an example super-resolution reconstruction of a fetal
   \begin{subfigure}[b]{0.18\textwidth}
     \fcolorbox{gray}{white}{\includegraphics[width=\textwidth]{images/test/test_sphere.png}}
     \caption{Sphere}
-    \label{fig:erosion0}
+    \label{fig:test_sphere}
   \end{subfigure}%
   ~~%add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.18\textwidth}
     \fcolorbox{gray}{white}{\includegraphics[width=\textwidth]{images/test/test_quadsphere.png}}
     \caption{Corner}
-    \label{fig:erosion1}
+    \label{fig:test_corner}
   \end{subfigure}%
   ~~%add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.18\textwidth}
     \fcolorbox{gray}{white}{\includegraphics[width=\textwidth]{images/test/test_cube.png}}
     \caption{Cube}
-    \label{fig:erosion2}
+    \label{fig:test_cube}
   \end{subfigure}%
   ~~%add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.18\textwidth}
     \fcolorbox{gray}{white}{\includegraphics[width=\textwidth]{images/test/test_random.png}}
     \caption{Random}
-    \label{fig:erosion3}
+    \label{fig:test_random}
   \end{subfigure}%
   ~~%add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.18\textwidth}
     \fcolorbox{gray}{white}{\includegraphics[width=\textwidth]{images/test/test_scan.png}}
     \caption{Fetal Brain}
-    \label{fig:erosion3}
+    \label{fig:test_example}
   \end{subfigure}
-  \caption{Steps involved in removing the edge.}\label{fig:erosionoverview}
+  \caption{Test Uncertainty Volumes.}\label{fig:test_uncertainties}
 \end{figure}
 
 % Idea -> Implementation -> Results
@@ -251,7 +254,7 @@ Uncertainty generated from an example super-resolution reconstruction of a fetal
 The idea behind thresholding is to isolate areas in the reconstructed image within a particular range of uncertainty. This allows the viewer to highlight regions in a specified range (e.g. 0.2 to 0.5) and also lets them isolate the worst values in the volume (e.g. the worst 1$\%$).
 
 \subsection*{Implementation}
-The implementation uses a filter provided by ITK to go create a binary mask which is set to 1 where the uncertainty is in the range and 0 where it is not. This mask is then overlayed on the reconstructed scan in 2D and made transparent so both the uncertain area and underlying scan can be seen simultaneously. See figure \ref{fig:thresholding2d}.
+The implementation uses a filter provided by ITK to create a binary mask set to 1 where the uncertainty is in the range and 0 where it is not. This mask is then overlayed on the reconstructed scan in 2D and made transparent so both the uncertain area and underlying scan can be seen simultaneously. See figure \ref{fig:thresholding2d}.
 
 \begin{figure}[H]
   \centering
@@ -298,7 +301,7 @@ The transfer functions used in each variation can be seen in figure \ref{fig:thr
   \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingoverview}
 \end{figure}
 
-An issue found with variation 1 was that the renderer still draws the edge of the uncertainty, even though it had previously been removed by erosion. This is due to the renderer using linear interpolation to take samples along each ray fired into the volume. Figure \ref{fig:thresholdingvariation1problem} illustrates the problem - the background has uncertainty 0.0, and the object has uncertainty $~$0.6. Points interpolated between the two will lie in the range 0.0-0.6 and so we find values of uncertainty that don't actually exist in the object.
+An issue found with variation 1 was that the renderer still draws the edge of the uncertainty, even though it had previously been removed by erosion. This is due to the renderer using linear interpolation to take samples along each ray fired into the volume. Figure \ref{fig:thresholdingvariation1problem} illustrates the problem - the background has uncertainty 0.0, and the object has uncertainty $\sim$0.6. Points interpolated between the two will lie in the range [0.0-0.6] and so we find values of uncertainty that don't actually exist in the object.
 
 \begin{figure}[h]
   \centering
@@ -314,7 +317,7 @@ An issue found with variation 1 was that the renderer still draws the edge of th
     \caption{Edge Artefacts}
     \label{fig:thresholdingvariation1artefacts}
   \end{subfigure}
-  \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingvariation1problem}
+  \caption{Edge artefacts.}\label{fig:thresholdingvariation1problem}
 \end{figure}
 
 A solution to this problem is to use a gradient transfer function which allows the change in uncertainty to influence the transparency. Rapid changes in uncertainty can therefore be treated as noise and ignored. The cutoff can be adjusted to remove the entire edge but there is a tradeoff as some genuine regions of uncertainty can also be filteredout. Figure \ref{fig:thresholdingvariationfix} shows the transfer function and the effect of tweaking the threshold.
@@ -354,62 +357,66 @@ Although tweaking the threshold can remove edge artefact variation 2 was found n
 
 \newpage
 \subsection*{Results}
-Here are the results that are achieved with the test uncertainties (see section \ref{section:testuncertainties}).
+Below are the results achieved with the test uncertainties (see section \ref{section:testuncertainties}). Each uncertainty is overlayed on an example reconstruction and the settings used in each case are shown.
 
 \begin{figure}[H]
   \centering
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/sphere_2d.png}
-    \caption{Sphere in 2D}
+    \caption{Sphere in 2D (Worst 5$\%$)}
     \label{fig:thresholdingresultssphere2d}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/sphere_3d.png}
-    \caption{Sphere in 3D}
+    \caption{Sphere in 3D (Worst 5$\%$)}
     \label{fig:thresholdingresultssphere3d}
   \end{subfigure}
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/sphere_corner_2d.png}
-    \caption{Sphere in Corner in 2D}
+    \caption{Sphere in Corner in 2D (Worst 1$\%$)}
     \label{fig:thresholdingresultsspherecorner2d}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/sphere_corner_3d.png}
-    \caption{Sphere in Corner in 3D}
+    \caption{Sphere in Corner in 3D (Worst 1$\%$)}
     \label{fig:thresholdingresultsspherecorner3d}
   \end{subfigure}
-  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
-    %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  % \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingvariation1problem}
+\end{figure}
+
+\begin{figure}[H]
+  \ContinuedFloat 
+  \centering
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/cube_2d.png}
-    \caption{Cube in 2D}
+    \caption{Cube in 2D (< 1.0)}
     \label{fig:thresholdingresultscube2d}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/cube_3d.png}
-    \caption{Cube in 3D}
+    \caption{Cube in 3D (< 1.0)}
     \label{fig:thresholdingresultscube3d}
   \end{subfigure}
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/scan_2d.png}
-    \caption{Scan in 2D}
+    \caption{Scan in 2D (Worst 5$\%$)}
     \label{fig:thresholdingresultsscan2d}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
-  \begin{subfigure}[b]{0.32\textwidth}
+  \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/results/scan_3d.png}
-    \caption{Scan in 3D}
+    \caption{Scan in 3D (Worst 5$\%$)}
     \label{fig:thresholdingresultsscan3d}
   \end{subfigure}
   % \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingvariation1problem}
@@ -420,9 +427,9 @@ Here are the results that are achieved with the test uncertainties (see section 
 The idea behind the uncertainty surface is to project the uncertainty (a 3D volume) onto a surface (effectively 2D) to give an overview of the uncertainty hotspots. Two versions have been implemented; the first maps the uncertainty to a sphere and the second maps the uncertainty to a surface representation of the organ being scanned. The uncertainty sphere is a generic visualization that can be applied to any scan, whereas the second requires a surface representation of the organ in question.
 
 \subsection*{Sphere}
-Two ways of mapping the uncertainty to the surfaces have been trialled. Originally the uncertainty was mapped to a texture which could then be applied to a surface. 
+Two ways of mapping the uncertainty to the surfaces have been trialled. OThe first maps the uncertainty to a texture which can then be applied to a surface. 
 
-Figure \ref{fig:uncertaintytexture} shows such a texture and the result when viewed on a sphere. To generate the uncertainty at each pixel the position (x, y) is first converted to spherical coordinates ($\theta$, $\phi$). These are then converted to a point (x', y', z') on a sphere of unit radius. The uncertainty at pixel (x, y) is then calculated by firing a ray from the center of the volume outwards, in direction (x', y', z') and accumulating uncertainty as it goes (see volume rendering section \\ref{background:volumerendering}).
+Figure \ref{fig:uncertaintytexture} shows such a texture and the result when viewed on a sphere. To generate the uncertainty at each pixel the position (x, y) is first converted to spherical coordinates ($\theta$, $\phi$). These are then converted to a point (x', y', z') on a sphere of unit radius. The uncertainty at pixel (x, y) is then calculated by firing a ray from the center of the volume outwards, in direction (x', y', z') and accumulating uncertainty as it goes (see volume rendering section \ref{background:volumerendering}).
 
 \begin{figure}[H]
   \centering
@@ -441,13 +448,13 @@ Figure \ref{fig:uncertaintytexture} shows such a texture and the result when vie
   \caption{Mapping a texture to a sphere.}\label{fig:uncertaintytexture}
 \end{figure}
 
-This technique has a number of issues. Firstly, it looks quite blocky unless the resolution is set very high. Secondly, due to the conversion to spherical coordinates parts of the sphere are less well represented - as an extreme the top row of pixels on the texture all correspond to the top point on the sphere. Finally this technique does not translate very well when trying to map to arbitrary surfaces that are not as regular as a sphere.
+This technique has a number of issues. Firstly, it looks quite blocky unless the resolution is set very high. Secondly, due to the conversion to spherical coordinates parts of the sphere are less well represented; in particular all pixels in the top row correspond to the very top of the sphere. Finally this technique does not translate very well when trying to map to arbitrary surfaces that are not as regular as a sphere.
 
 Another approach was then trialled. In MITK it is possible to store a colour at each point on a surface and use the colours at each point to interpolate values all over the surface. This effectively removes the need for the texture, as each point on the surface can be set directly in turn.
 
-This process begins by generating a surface representation of a sphere - the resolution of this model can be changed to alter the number of points used to approximate the sphere.
+This process begins by generating a surface representation of a sphere. In the same way that the resolution of the texture could be increased, more points can be used to model the sphere. Modelling in this way removes the issue that the top of the sphere is overrepresented; there is only ever one point there.
 
-Then each point on the sphere is registered to a start point to begin sampling in the volume (volume intersection in figure). The normal of the point on the sphere is then used as a direction to sample in. The start of the genuine uncertainty is then found by following the sampling direction until the value is not background (uncertainty intersection in figure). Figure \ref{fig:surface_sampling_example} illustrates this process.
+Then each point on the sphere is registered to a start point to begin sampling in the volume (labelled volume intersection in figure). The normal of the point on the sphere is then used as a direction to sample in. The start of the genuine uncertainty is then found by following the sampling direction until the value is not background (labelled uncertainty intersection in figure). Figure \ref{fig:surface_sampling_example} illustrates this process.
 
 \begin{figure}[H]
   \centering
@@ -461,21 +468,21 @@ A tortoise and hare algorithm is then used to be able to vary how far into the v
   \centering
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/tortoise_and_hare_1.png}
-    \caption{Start}
+    \caption*{Start}
     \label{fig:tortoiseandhare1}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/tortoise_and_hare_2.png}
-    \caption{...}
+    \caption*{...}
     \label{fig:tortoiseandhare2}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/tortoise_and_hare_3.png}
-    \caption{End}
+    \caption*{End}
     \label{fig:tortoiseandhare3}  
   \end{subfigure}
   \caption{Illustration of Tortoise and Hare Algorithm}\label{fig:tortoiseandhareexample}
@@ -483,17 +490,17 @@ A tortoise and hare algorithm is then used to be able to vary how far into the v
 
 The accumulation that the tortoise does can also be customized. By default it will take the average of all of the samples it takes, but the best value and also the worst value along the ray can be extracted.
 
-Once all of the points have been computed some scaling can be implemented to improve the contrast of the visualization. In many cases the average uncertainty will be roughly the same everywhere and if the range (0-1) is mapped to the entire colour range the values end up looking idential; to fix this the outputted colour range can be linearly mapped to make better use of the colours available.
+Once all of the points have been computed some scaling can be implemented to improve the contrast of the visualization. In many cases the average uncertainty will be roughly the same everywhere and if the range [0-1] is mapped to the entire colour range the values end up looking largely indistinguishable; to fix this the outputted uncertainty range can be linearly mapped to make better use of the available colours.
 
 \subsection*{Surface}
 
 To map to a different surface model the procedure is largely the same. Again the first step is to generate the surface representation. Currently this is done using the mask supplied in the reconstruction step - applying surface extraction and mesh decimation (see section \ref{background:surfaceextraction}) to create a rough surface representation.
 
-The registration step in this case is trivial as the mask uses the same coordinate system as the uncertainty volume. The normal at the surface can then be used, as before, and scaling similarly applied.
+The registration step for each point is then trivial as the mask uses the same coordinate system as the uncertainty volume. The normal at the surface is used, as before, to perform the sampling, and scaling can similarly be applied.
 
 \newpage
 \subsection*{Results}
-Scaling was found to significantly increase the contrast of the visualization. The legend shows the scaling applied in each case.
+Scaling was found to significantly increase the contrast of the visualization, see figure \ref{fig:surfacescaling}. The legend overlayed shows the scaling applied in each case.
 
 \begin{figure}[H]
   \centering
@@ -526,7 +533,7 @@ Scaling was found to significantly increase the contrast of the visualization. T
   \caption{The effect of linear mapping.}\label{fig:surfacescaling}
 \end{figure}
 
-The surface representation difficult to interpret by looking at a single image in a report. Figure \ref{fig:surface180} illustrates various angles. In practice all of these visualizations can be rotated and zoomed.
+The surface representation difficult to interpret by looking at a single image on paper. Figure \ref{fig:surface180} shows the surface from various angles. In practice all of these visualizations can be rotated and zoomed.
 
 \begin{figure}[h]
   \centering
@@ -566,54 +573,60 @@ The surface representation difficult to interpret by looking at a single image i
   \caption{Brain surface viewed from different directions.}\label{fig:surface180}
 \end{figure}
 
-The default behaviour of taking the average uncertainty along the ray does a good job of bringing out the uncertainty but switching to the worst brings severe values that would otherwise be outweighed by good values to the surface. Switching to the best value isolates only truly terrible areas.
+Figure 25 illustrates the effect of changing the accumulator. The default behaviour of taking the average uncertainty along the ray does a reasonable job of bringing the uncertainty to the surface. Changing it to extract the worst value gives the viewer a better idea of the size of the uncertain region as values that would otherwise be outweighed by largely good values are brought to the surface.
+
+There results when finding the best value are poor. It doesn't really work at all when applied to the sphere as in the vast majority of cases there is a good value somewhere along the ray which results in a largely uniform appearance. 
+
+The same logic largely applies to the brain surface as well, however areas on the volume where the normal does not send the ray far into the volume are visible.
 
 \begin{figure}[H]
   \centering
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/sphere_average.png}
-    \caption{Average}
+    \caption*{Sphere - Average}
     \label{fig:sphereaverage}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/sphere_worst.png}
-    \caption{Worst}
+    \caption*{Sphere - Worst}
     \label{fig:sphereworst}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/sphere_best.png}
-    \caption{Best}
+    \caption*{Sphere - Best}
     \label{fig:spherebest}  
   \end{subfigure}
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)  
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/surface_average.png}
-    \caption{Average}
+    \caption*{Surface - Average}
     \label{fig:surfaceaverage}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/surface_worst.png}
-    \caption{Worst}
+    \caption*{Surface - Worst}
     \label{fig:surfaceworst}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/surface/surface_best.png}
-    \caption{Best}
+    \caption*{Surface - Best}
     \label{fig:surfacebest}  
   \end{subfigure}  
   \caption{Comparison of Average/Best/Worst sampling.}\label{fig:surfaceaccumulator}
 \end{figure}
 
-The sample distance determines how far into the volume samples go. Currently there are two options available - half and full. These options are less applicable to the sphere as if it is set to full then opposite sides of the sphere give identical values. When applied to the surface the use of this option very much depends on the area of the body that is being scanned. The brain is a large, and for the most part (ignoring folds particularly) convex; in this respect it is similar to the sphere and the effect of sampling all the way through is much the same (see figure \ref{fig:surfacesampledistance}). You can notice that the average uncertainty gets better with full sampling as there are more good points to outweigh the bad.
+The sample distance determines how far into the volume samples go. Currently there are two options available - half and full. These options are less applicable to the sphere as if it is set to full then opposite sides of the sphere give identical values.
+
+When applied to the surface the use of this option very much depends on the area of the body that is being scanned. The brain is a large, and for the most part (ignoring folds particularly) convex; in this respect it is similar to the sphere and the effect of sampling all the way through is much the same (see figure \ref{fig:surfacesampledistance}). You can notice that the average uncertainty gets better with full sampling as there are more good points to outweigh the bad ones in that region.
 
 \begin{figure}[H]
   \centering
@@ -632,22 +645,22 @@ The sample distance determines how far into the volume samples go. Currently the
   \caption{Comparing half and full distance sampling.}\label{fig:surfacesampledistance}
 \end{figure}
 
-Where this parameter may be more useful however is when dealing with smaller, more intricate objects, such as arteries. It would allow the uncertainty the entire cross section to be mapped to the surface which would give an overview of the uncertainty in that section at a glance, rather than having to rotate around it to get the full picture.
+Where this parameter may be more useful however is when dealing with smaller, more intricate objects, such as arteries. It would allow the uncertainty in the entire cross section to be mapped to the surface, giving an overview of that section at a glance, rather than having to rotate around it to get the full picture.
 
 \newpage
 \section{Next Scan Plane}\label{section:nextscanplane}
-The idea behind this visualization is based on some previous research\cite{uncertaintysvd} on finding the optimum place to scan next given the current uncertainty. With this knowledge the scanning process can continually target areas of uncertainty to optimize the quality of the scan.
+The idea behind this visualization is based on research\cite{uncertaintysvd} which uses SVD to find the optimum position and direction to scan next given the current uncertainty. With this knowledge the scanning process can continually target areas of uncertainty to optimize the quality of the reconstruction.
 
-This visualization is designed to communicate this next best scan to the radiographer in a way that gives them some context as to why this is in some sense optimal.
+This visualization is designed to communicate the next best scan to the radiographer in a way that also provides some context as to why this is optimal.
 
 The main obstacle that prevents this being integrated into MRI scanners currently is the fact that the reconstruction code takes far too long to run during a scan, which generally last no longer than 45-60 minutes.
 
 \subsection*{Implementation}
-The technique, based on SVD, takes in a set of points, and finds the optimal direction to scan in. The implementation lets the user determine the set of points given to the algorithm by specifying a threshold of uncertainty. Before generating the next scan the threshold is first visualized, using the thresholding visualization (section \ref{section:thresholding}). Then the SVD implementation from the VNL numerics library is then used to produce the scan direction and center point.
+The implementation lets the user determine the set of points to target by specifying an upper threshold of uncertainty (e.g. all values worse than 0.7) which can be changed and previewed using thresholding (section \ref{section:thresholding}).
 
-The resulting scan is then visualized as a circle which shows the center of the scan, and a cylinder which shows the direction of the scan. The reason that the scan is shown as a circle is because the technique only determines the scan direction (z-axis/slice direction) and not the x and y axes.
+The SVD implementation from the VNL numerics library is then used to produce the scan direction and center point. The resulting scan is then visualized as a circle, which shows the central slice of the scan, and a cylinder which indicates the direction of the scan.
 
-The next scan plane can be overlayed on both the thresholded uncertainty as well as a volume rendering of the original scan.
+Currently the scan is shown as a circle/cylinder as only the z-direction (slice direction) is extracted.
 
 \subsection*{Results}
 
@@ -657,24 +670,24 @@ Figure \ref{fig:nextscanplane} illustrates the process the user goes through.
   \centering
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/next_scan_plane/next_scan_plane_threshold.png}
-    \caption{Target Uncertainty}
+    \caption*{Uncertainty to target.}
     \label{fig:nextscanplanethreshold}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/next_scan_plane/next_scan_plane_1.png}
-    \caption{Next Scan Plane}
+    \caption*{Next scan plane.}
     \label{fig:nextscanplane1}
   \end{subfigure}%
   ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
     %(or a blank line to force the subfigure onto a new line)
   \begin{subfigure}[b]{0.32\textwidth}
     \includegraphics[width=\textwidth]{images/next_scan_plane/next_scan_plane_2.png}
-    \caption{With Scan}
+    \caption*{With scan volume.}
     \label{fig:nextscanplane2}  
   \end{subfigure}
-  \caption{Comparison of Average/Best/Worst sampling.}\label{fig:nextscanplane}
+  \caption{Next scan plane process.}\label{fig:nextscanplane}
 \end{figure}
 
 Figure \ref{fig:nextscanplanetests} shows the next scan planes for the test uncertainties. The sphere and sphere in corner can be scanned from any direction as they have infinitely many lines of symettry. The cube is scanned such that the maximum number of slices hits it. The random volume, similar to the sphere, is also best scanned from one of the three main axes.
