--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -11,6 +11,7 @@
 ]{scrbook}
 
 \usepackage[linedheaders,parts,pdfspacing]{classicthesis}
+
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{acronym}
@@ -110,6 +111,10 @@
 
 % Frame
 \include{xcolor}
+
+% Section References
+\newcommand\sectionreference[1]{\begin{flushleft}\small\textit{#1}\end{flushleft}}
+
 
 \begin{document}
 
