--- a/Final-Report/introduction.tex
+++ b/Final-Report/introduction.tex
@@ -5,33 +5,25 @@
 
 Magnetic Resonance Imaging (MRI) has found itself being used in an ever increasing number of applications. Uses range from imaging the spinal cord and heart to detecting brain activity (fMRI) and refinements to the technique have resulted in its use in fetal imaging increasing.
 
-In many ways MRI is highly suited to fetal imaging; it has impressive contrast in soft tissue and no known harmful side effects. However, limitations in resolution make imaging what can often be very small area difficult. Super resolution reconstruction is a technique designed to mitigate this problem by constructing a high resolution volume from a number of lower resolution scans.
+In many ways MRI is highly suited to fetal imaging; it has impressive contrast in soft tissue and no known harmful side effects. However, limitations in resolution make imaging what can often be a very small target difficult. Super resolution reconstruction is a technique designed to mitigate this problem by constructing a high resolution volume from a number of lower resolution scans.
 
 Of course the quality of the reconstruction depends on the quality of these scans. If, for example, the fetus moves during the scanning process, then some areas will be less well sampled than others. This results in less data to use in some areas of the reconstruction than others and gives rise to areas of high uncertainty.
  
-From just looking at the reconstructed image it is not necessarily obvious where these areas are. Crucially when using these images for diagnostic purposes it very is important to be aware of this. If a diagnosis needs to be made based on a region of the reconstruction with high uncertainty then this indicates that further scanning may be required.
+From just looking at the reconstructed image it is not necessarily obvious where these areas are. Crucially when using these images for diagnostic purposes it very is important to be aware of this. If a diagnosis needs to be made based on a region of the reconstruction with high uncertainty then this may indicate that further scanning.
 
 % Specify main objectives.
 % Specify main contributions - provide section numbers.
 
-The main aim of the project was to prototype visualizations that can communicate the uncertainty of a reconstruction to researchers and radiographers. This will allow them to both gauge how well a reconstruction went and highlight any particular problem areas.
+The main aim of the project was to prototype visualizations to communicate this uncertainty to researchers and radiographers. This will allow them to both gauge how well a reconstruction went and highlight any particular problem areas.
 
-Two distinctive approaches have been prototyped and their effectiveness has been evaluated with a group of expert users. The first technique (section \ref{section:thresholding}) uses thresholding to show areas of the scan within a particular uncertainty range; the areas that fall in a given range (e.g. the worst 1$\%$) can then be displayed on top of the scan in 2D and as a volume in 3D. The second technique (section \ref{section:uncertaintysurface}) projects the uncertainty in a scan on to a surface representation of the object that has been scanned, highlighting the worst regions.
+Two distinctive approaches have been prototyped and their effectiveness has been evaluated with a group of expert users. The first technique (section \ref{section:thresholding}) uses thresholding to find areas of the scan within a specific range of uncertainty; these areas can then be overlayed on the scan in 2D or displayed as a volume in 3D. The second technique (section \ref{section:uncertaintysurface}) projects the uncertainty to a surface representation of the object that has been scanned.
 
-These trade-offs off the two approaches have been looked at to see what works well and where future development should be focused. See chapter \ref{chapter:evaluation}.
+The trade-offs between the two approaches have been studied to establish what works well and where future development should be focused. See chapter \ref{chapter:evaluation}.
 
-As well as being able to visualize the uncertainty, recent research\cite{uncertaintysvd} has shown that it is possible to use the uncertainty to guide the scanning process. The idea is if we can compute, at the time of scanning, the areas of high uncertainty then we can then tailor the next scan position and direction to target these problem areas. A visualization designed to communicate this information has also been created (see section \ref{section:nextscanplane}) and also evaluated.
+As well as being able to visualize the uncertainty, recent research\cite{uncertaintysvd} has shown that it is possible to use the uncertainty to guide the scanning process. The idea is if we know, at the time of scanning, the areas of high uncertainty then we can then tailor the next scan position and direction to target these problem areas. A visualization designed to communicate this information has also been created (see section \ref{section:nextscanplane}) and evaluated.
 
-Finally these features have been wrapped up in a research tool that combines every stage in the reconstruction pipeline together. It allows the user to simulate a scan (section \ref{section:simulatescan}), reconstruct the image (section \ref{section:reconstruction}) and then visualize the results.
+Finally these visualizations have been wrapped up in a research tool that combines every stage in the reconstruction pipeline together. It allows the user to simulate a scan (section \ref{section:simulatescan}), reconstruct the image (section \ref{section:reconstruction}) and then visualize the results.
 
-The scan simulation part of the tool allows you to take an existing, well reconstructed image and use this as a basis for creating new, lower resolution scans. The idea behind this is that we can assume that the initial image is the 'perfect' reconstruction, then create lower resolution scans from it, run our reconstruction algorithm and then compare the result to the original. This will allow tweaks to the reconstruction algorithm to be thoroughly tested without actually scanning thousands of patients. Currently a very simple motion corruption 'simulation' is implemented which will allow the tolerance of a reconstruction algorithm to motion to be tested. Speaking to expert users has given rise to a large number of additional features that can be simulated.
+The scan simulation feature allows you to take an existing, well reconstructed image and use this as a basis for creating new, lower resolution scans. The idea is that we can assume that the initial image is the 'perfect' reconstruction, create lower resolution scans from it, run our reconstruction algorithm and then compare the result to the original. This will allow different reconstruction algorithms to be thoroughly tested without having to scan thousands of patients. Currently a simple motion corruption simulation can be enabled which will allow the tolerance of a reconstruction algorithm to motion to be tested. Similarly this feature has been evaluated with expert users. See chapter \ref{chapter:evaluation}.
 
-The reconstruction part of the tool uses the GPU implementation from a previous research paper\cite{gpureconstruction} to perform fast reconstruction of the slice stacks. One additional feature that has been prototyped is the ability to guide the reconstruction by marking landmarks on each of the slice stacks. One way to improve the quality of the reconstruction, by guiding the registration process, is to manually mark on each of the slices stacks a set of landmarks (e.g. Left Eye, Right Eye, ...). These points can then be used to guide the reconstruction.
-
-\subsection{TODO}
-% Specify objectives that didn't get met.
-TODO: What objectives weren't accomplished?
-\begin{enumerate}
-	\item Registering a generic model to a volume.
-	\item Animation.	
-\end{enumerate}
+The reconstruction feature provides an easy interface to the fast GPU reconstruction implementation from a previous research paper\cite{gpureconstruction}. Additionally a prototype that allows the reconstruction process to be guided by marking landmarks on each of the slice stacks has been implemented. One way to improve the quality of the reconstruction, by guiding the registration process, is to manually mark on each of the slices stacks a set of landmarks (e.g. Left Eye, Right Eye, ...).
